--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-html, body{
-    height: 100%;
-}
-
 body{
     background-color: #fefe22c2;
     padding: 0;
@@ -15,7 +11,11 @@ main{
     display: flex;
 }
 
-.esquerda{
+.container{
+    overflow: hidden;
+}
+
+.esquerda-home{
     display: flex;
     width: 50vw;
     flex-direction: column;
@@ -23,17 +23,19 @@ main{
     align-items: center;
 }
 
-.esquerda h1{
+.esquerda-home h1{
   width: 80%;
-  font-size: 30pt;
+  font-size: 40pt;
+  font-family: "Playfair Display", serif;
+  font-optical-sizing: auto;
 }
 
-.esquerda p{
+.esquerda-home p{
     width: 80%;
     font: 8pt;
   }
 
-.direita{
+.direita-home{
     display: flex;
     width: 50vw;
     justify-content: center;
@@ -54,21 +56,85 @@ li{
 
 #navbar{
     background-color: white;
+    width: 100%;
 }
 
 #logo{
     width: 100px;
 }
 
-.hide-scrollbar::-webkit-scrollbar {
-    display: none;
+span{
+    background-color: black;
+    color: #fefe22c2;
+    padding: 10px;
+    border-radius: 20px;
 }
 
-.hide-scrollbar {
-    -ms-overflow-style: none; /* IE e Edge */
-    scrollbar-width: none; /* Firefox */
+a{
+    text-decoration:none;
+    color: black;
 }
 
-main img{
-    max-height:max-content;
+
+footer{
+    width: 100vw;
+    height: 300px;
+    background-color: black;
+    color: #fefe22c2;
 }
+
+footer ul{
+    display: flex;
+    flex-direction: column;
+    padding: 30px;
+}
+
+footer span{
+  font-size: 20pt;
+}
+
+.container-sobre{
+    display: flex;
+    width: 100vw;
+    height: 100vh;
+}
+.direita-sobre{
+    width: 50vw;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+}
+.esquerda-sobre{
+    width: 50vw;
+    height: 100vh;
+    width: 50vw;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.esquerda-sobre img{
+    width: 60%;
+    margin-left: 80px;
+    border: 2px solid black;
+    border-radius: 50px;
+    box-shadow: 10px 10px 50px rgba(0, 0, 0, 0.465);
+}
+
+.direita-sobre h2{
+    font-size: 30pt;
+}
+.direita-sobre p{
+    width: 50%;
+    text-align: center;
+    font-size: 14pt;
+}
+
+img{
+    box-sizing:border-box;
+}
+
