--- a/style.css
+++ b/style.css
@@ -145,3 +145,102 @@ footer span{
 img{
     box-sizing:border-box;
 }
+
+@media (max-width: 1500px){
+    .esquerda-home h1{
+        font-size: 28pt;
+    }
+    .esquerda-home span{
+        font-size: 24pt;
+        padding: 3px;
+        border-radius: 8px;
+    }
+    .direita-home img{
+        width: 800px;
+        height: 800px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .direita-sobre p{
+        width: 80%;
+        text-align: center;
+        font-size: 14pt;
+    }
+    .esquerda-sobre img{
+        width: 80%;
+    }
+}
+
+@media (max-width: 940px){
+    .esquerda-home h1{
+        font-size: 28pt;
+    }
+    .esquerda-home span{
+        font-size: 24pt;
+        padding: 3px;
+        border-radius: 8px;
+    }
+    .direita-home img{
+        width: 600px;
+        height: 600px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .direita-sobre p{
+        width: 80%;
+        text-align: center;
+        font-size: 14pt;
+    }
+    .esquerda-sobre img{
+        width: 80%;
+    }
+}
+
+
+@media (max-width: 600px){
+    .direita-home img{
+        width: 400px;
+        height: 400px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .esquerda-home h1{
+        font-size: 18pt;
+    }
+    .esquerda-home p{
+        font-size: 9pt;
+    }
+    .esquerda-home span{
+        font-size: 18pt;
+        padding: 3px;
+        border-radius: 8px;
+    }
+    .container-sobre{
+        flex-direction: column;
+        align-items: center;
+        margin: 0;
+        padding: 0;
+    }
+    .direita-sobre{
+        margin-bottom: 300px;
+    }
+    .direita-sobre p{
+        width: 150%;
+        text-align: center;
+        font-size: 14pt;
+    }
+    .esquerda-sobre img{
+        align-items: center;
+        margin: 0;
+        padding: 0;
+    }
+    .esquerda-sobre{
+        margin: 0;
+        padding: 0;
+        margin-top: 150px;
+    }
+    
+}
