--- a/style.css
+++ b/style.css
@@ -5,8 +5,20 @@ body{
     box-sizing: border-box;
 }
 
-html{
+html {
+    font-size: 62.5%;
     scroll-behavior: smooth;
+}
+
+/* Para navegadores WebKit */
+::-webkit-scrollbar {
+    display: none;
+}
+
+/* Para outros navegadores */
+html, body {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
 }
 
 main{
@@ -37,7 +49,7 @@ main{
 
 .esquerda-home p{
     width: 80%;
-    font: 8pt;
+    font-size: 1.1rem;
   }
 
 .direita-home{
@@ -115,8 +127,6 @@ footer span{
     justify-content: center;
 }
 .esquerda-sobre{
-    width: 50vw;
-    height: 100vh;
     width: 50vw;
     height: 100vh;
     display: flex;
@@ -198,7 +208,6 @@ img{
     }
 }
 
-
 @media (max-width: 600px){
     .direita-home img{
         width: 400px;
@@ -238,9 +247,7 @@ img{
         padding: 0;
     }
     .esquerda-sobre{
-        margin: 0;
+        margin: 150px 0 0 0;
         padding: 0;
-        margin-top: 150px;
     }
-    
 }
